# yetalauncher

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-dev.yml
gui/: enums.slint  globals.slint  sidebar.slint  sidebar_button.slint  structs.slint  window.slint
gui/pages/: accounts.slint  create.slint  home.slint  instance.slint  settings.slint
gui/pages/instance_tabs/: mods.slint
gui/widgets/: account_tile.slint  custom_slider.slint  icon_button.slint  instance_tile.slint  minecraft_picker.slint  notif_container.slint  notification.slint  number_input.slint  settings_container.slint  sidebar.slint  sidebar_button.slint  text_field.slint  topbar.slint
src/: main.rs
src/app/: accounts.rs  consts.rs  downloader.rs  mod.rs  notifier.rs  settings.rs  slint_utils.rs  utils.rs
src/launcher/: java.rs  mod.rs
src/launcher/authentication/: auth_structs.rs  mod.rs
src/launcher/instances/: curseforge.rs  errors.rs  instance.rs  mod.rs  multimc.rs
src/launcher/launching/: libraries.rs  manifests.rs  mc_structs.rs  mod.rs
src/launcher/modloaders/: fabric.rs  forge.rs  forge_installer.rs  mod.rs
src/launcher/modloaders/fabric/: mod.rs
src/launcher/modloaders/forge/: install_profile.rs  installer.rs  legacy_installer.rs  mod.rs
src/ui/: mod.rs  pages.rs  sidebar.rs  theme.rs
src/ui/pages/: accounts.rs  create.rs  home.rs  mod.rs  settings.rs
