[package]
name = "yetalauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afire = "2.2.1"
chrono = { version = "0.4.33", features = ["serde"] }
dirs = "5.0.1"
fastrand = "2.0.1"
jars = "0.1.1"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
rfd = { version = "0.13.0", default-features = false, features = ["tokio", "xdg-portal"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.112"
sha1_smol = "1.0.0"
simple_logger = "4.3.3"
slint = "1.4.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[build-dependencies]
slint-build = "1.4.1"


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Link time optimizations
opt-level = 3 # Optimize the most
strip = true # Remove debug symbols
