[package]
name = "yetalauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afire = "2.2.1"
chrono = { version = "0.4.35", features = ["serde"] }
clone-macro = "0.1.0"
dirs = "5.0.1"
fastrand = "2.0.1"
image = "0.24.9"
jars = "0.1.1"
log = "0.4.21"
open = "5.1.2"
reqwest = { version = "0.11.25", features = ["json"] }
rfd = { version = "0.14.0", default-features = false, features = ["tokio", "xdg-portal"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.114"
sha1_smol = "1.0.0"
simple_logger = "4.3.3"
slint = { version = "1.5.1", default-features = false, features = ["std", "accessibility", "compat-1-2", "log"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
zip = "0.6.6"

[build-dependencies]
slint-build = "1.5.1"


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Link time optimizations
opt-level = 3 # Optimize the most
strip = true # Remove debug symbols


[features]
default = ["use-qt"] # for fast dev compilation; Qt must be installed
release = ["use-qt", "backend-winit", "use-skia"] # works everywhere

backend-qt = ["slint/backend-qt"]
backend-winit = ["slint/backend-winit"]

use-qt = ["backend-qt"] # simple and good, but requires system Qt installation and has no hardware acceleartion
use-skia = ["slint/renderer-skia"] # has a lot of dependencies, but also has hardware acceleration
use-femtovg = ["slint/renderer-femtovg"] # looks bad
use-software = ["slint/renderer-software"] # doesn't work
