[package]
name = "yetalauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afire = "2.2.1"
chrono = { version = "0.4.35", features = ["serde"] }
clone-macro = "1"
dirs = "6"
fastrand = "2"
image = "0.25"
jars = "0.1.1"
log = "0.4"
open = "5"
reqwest = { version = "0.13", features = ["json", "form"] }
rfd = { version = "0.17" }
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
serde_json = "1"
sha1_smol = "1"
simple_logger = "5"
slint = { version = "1.14", default-features = false, features = ["std", "accessibility", "compat-1-2", "log"] }
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
zip = "7"

[build-dependencies]
slint-build = { version = "1.14" }


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Link time optimizations
opt-level = 3 # Optimize the most
strip = true # Remove debug symbols


[features]
default = ["use-qt"] # for fast dev compilation; Qt must be installed
release = ["backend-winit", "use-skia"] # works everywhere

backend-qt = ["slint/backend-qt"]
backend-winit = ["slint/backend-winit"]

use-qt = ["backend-qt"] # simple and good, but requires system Qt installation and has no hardware acceleartion
use-skia = ["slint/renderer-skia"] # has a lot of dependencies, but also has hardware acceleration
use-femtovg = ["slint/renderer-femtovg"] # looks bad
use-software = ["slint/renderer-software"] # doesn't work
